# resume

./: .gitignore  README.md  index.html  script.js  styles.css  wrangler.jsonc
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .funcignore  README.md  bootstrap  index.py  package-lock.json  package.json  pyproject.toml  requirements.txt  s.yaml  wrangler.jsonc
backend/app/: main.py
backend/src/: worker.py
backend/src/app/: config.py  main.py  models.py  resume_data.py  session.py
backend/src/app/harness/: __init__.py  agent.py  chat_completions_client.py  embedding.py  events.py  guard.py  http_sse.py  observability.py  openai_client.py  prompts.py  provider_factory.py  pydantic_tools.py  router.py  stream_types.py  tools.py  utils.py  workers_ai_client.py
backend/static/: script.js
backend/tests/: eval_cases.json  test_agent_eval.py  test_config.py  test_guard.py  test_provider_factory.py  test_pydantic_tools.py  test_retrieval_eval.py  test_sanitise.py
docs/: backend-ai-v1-design.md
