[project]
name = "resume-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Lu Wang's Resume Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.10.4",
  "pydantic-ai-slim==1.60.0",
  "rank-bm25==0.2.2",
  "numpy==2.2.6",
  "faiss-cpu==1.9.0.post1",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "uvicorn[standard]==0.34.0",
  "workers-py",
  "workers-runtime-sdk",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
